--- a/app/src/main/res/layout/update_patient.xml
+++ b/app/src/main/res/layout/update_patient.xml
@@ -113,10 +113,11 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical">
 
-                    <EditText
+                    <Spinner
                         android:id="@+id/edit_patient_gender"
                         style="@style/FormFieldsStyle"
-                        android:hint="@string/patient_gender_hint"></EditText>
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -136,10 +137,12 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical">
 
-                    <EditText
-                        android:id="@+id/edit_patient_birthday"
-                        style="@style/FormFieldsStyle"
-                        android:hint="@string/patient_birthday_hint"></EditText>
+                    <TextView
+                        android:id="@+id/date_field"
+                        style="@style/LabelTitleFieldsStyleDate"
+                        android:onClick="showDatePickerDialog"
+                        android:hint="@string/patient_birthday_select"
+                        android:textColor="@android:color/black"></TextView>
                 </LinearLayout>
             </LinearLayout>
 
