--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,15 @@
         <item name="android:layout_marginTop">8dp</item>
     </style>
 
+    <style name="LabelTitleFieldsStyleDate">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColorHint">@color/hint</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
     <style name="LabelTitleFieldsStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -154,6 +163,7 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="CustomDialogTheme" parent="@android:style/Theme.Dialog">
