A method was build to reduce and compress participants photos.  Also a server uploader was included as a broadcaster, it will send db's after detecting a stable WiFi connection (i.e., after 10 min of find a WiFi conn). Files will be upload only if they are not been used; to do so a metric of 10 min was established.
Note: after detecting a WiFi conn and launch the first batch of files, the broadcaster will wait another 30 min before sending another batch of files. Thus, we reduce battery consumption.

--- a/app/src/main/res/layout/add_patient.xml
+++ b/app/src/main/res/layout/add_patient.xml
@@ -28,12 +28,7 @@
 
                 <ImageView
                     android:id="@+id/patient_photo"
-                    android:layout_width="66dp"
-                    android:layout_height="61dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
+                    style="@style/generalHeaderImageStyle"
                     android:src="@drawable/profile"></ImageView>
 
 
