--- a/app/src/main/res/layout/test_evaluation.xml
+++ b/app/src/main/res/layout/test_evaluation.xml
@@ -8,8 +8,9 @@
 
     <RelativeLayout
         android:id="@+id/dialog_social_layout"
-        android:layout_width="300dp"
-        android:layout_height="430dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
         android:background="@android:color/white"
         android:orientation="vertical">
 
@@ -120,6 +121,8 @@
                     android:id="@+id/dialog_media_comment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:hint="@string/observations_hint"
                     android:padding="16dp"
                     android:singleLine="true"
