--- a/app/src/main/res/layout/count_down.xml
+++ b/app/src/main/res/layout/count_down.xml
@@ -83,6 +83,7 @@
                 android:fontFamily="arial"
                 android:gravity="center"
                 android:textSize="90sp"
+                android:visibility="gone"
                 android:textStyle="bold" />
         </LinearLayout>
 
