--- a/app/src/main/res/layout/manual_upload.xml
+++ b/app/src/main/res/layout/manual_upload.xml
@@ -20,6 +20,26 @@
         android:layout_below="@+id/manual_upload_description" />
 
     <LinearLayout
+        android:id="@+id/account_still_inactive_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="30dp"
+            android:text="@string/account_no_activated"
+            android:background="@color/material_blue_500"
+            android:alpha="0.8"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:textAppearance="?android:textAppearanceLarge" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
