--- a/app/src/main/res/layout/manual_upload.xml
+++ b/app/src/main/res/layout/manual_upload.xml
@@ -19,6 +19,22 @@
         android:text="@string/remaining_data_date"
         android:layout_below="@+id/manual_upload_description" />
 
+    <TextView
+        android:id="@+id/manual_upload_description_fiware"
+        android:layout_below="@+id/remaining_data_date"
+        android:paddingTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_description_fiware"
+        android:textAppearance="?android:textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/remaining_data_date_fiware"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/remaining_data_date"
+        android:layout_below="@+id/manual_upload_description_fiware" />
+
     <LinearLayout
         android:id="@+id/account_still_inactive_layout"
         android:layout_width="match_parent"
