--- a/app/src/main/res/layout/strength_test_evaluation_list.xml
+++ b/app/src/main/res/layout/strength_test_evaluation_list.xml
@@ -87,6 +87,35 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/loadingLinearLayout"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:textAlignment="center"
+                    android:text="@string/storing_warning"
+                    android:textAppearance="?android:textAppearanceMedium" />
+
+                <ProgressBar
+                    android:id="@+id/loading"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_centerInParent="true"
+                    android:visibility="visible"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
