--- a/app/src/main/res/layout/concentrated_finish_activity.xml
+++ b/app/src/main/res/layout/concentrated_finish_activity.xml
@@ -126,6 +126,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/loadingLinearLayout"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
@@ -138,6 +139,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
+                android:textAlignment="center"
                 android:text="@string/storing"
                 android:textAppearance="?android:textAppearanceMedium" />
 
@@ -163,7 +165,7 @@
             <TextView
                 android:id="@+id/button_cancel"
                 style="@style/folderButtonStyle"
-                android:text="@string/button_cancel" />
+                android:text="@string/button_edit" />
 
             <View
                 android:layout_width="8dp"
